# OpenAMF_Autotests

./: .gitignore  CMakeLists.txt  Common.cpp  Complex.cpp  General.cpp  Metal.cpp  OpenCL.cpp  README.md  api.cpp  autotests.cpp  autotests.h  build-linux.sh  build-mac.sh  generate-mac-shared.sh  generate-mac-static.sh  generate-shared-linux.sh  generate-shared-vs2017.bat  generate-shared-vs2019.bat  generate-static-linux.sh  generate-static-vs2017.bat  generate-static-vs2019.bat  generate-xcode-static.sh  generate_mac.sh  implementation.cpp  main.cpp  references.cpp
Reports/: MakeReport.py  details_AMF_Compute_test_test.html  example.json  integrationTest.json  mainPage.html
Reports/resources/: tests_skips.json
Reports/resources/css/: button_style.css  search_style.css  table_style.css
Reports/resources/js/: modals.js  search.js
Reports/templates/: main_page.html  realMainPage.html  test_suite_details_page.html
newTestGroups/: Complex.cpp  General.cpp  Implementation.cpp  Metal.cpp  OpenCL.cpp  api.cpp  geometry.cpp  main.cpp  multithread.cpp
src/: AMFSTL.cpp  AMF_Compute.cpp  AMF_Compute_Metal.cpp  AMF_Compute_OpenCL.cpp  AMF_Factory.cpp  AMF_Memory.cpp  AMF_Programs.cpp  AMF_PropertyStorage.cpp  AMF_STL.cpp  AMF_Trace.cpp  AMF_VariantStruct.cpp  Autotests.cpp  Autotests.h  Complex.cpp  General.cpp  Memory.cpp  Metal.cpp  MultithreadCompute.cpp  OpenCL.cpp  Thread.cpp  autotests.h  implementation.cpp
